Trying to fix white space

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ li a:hover {
 
 .jumbotron {
   background: rgba(255, 255, 255, 0);
-  padding-top: 115px;      
+  padding-top: 175px;      
 }
 
 p {
